# declarative-data-architecture

.claude/: VENDOR.md
.claude/hooks/: session-start
docs/adr/: 0001-single-go-binary-and-uv-venvs.md  0002-no-dlt-normalization.md  0003-das-owns-no-materialized-data.md  0004-go-duckdb-over-adbc.md  0005-double-underscore-as-concern-separator.md  0006-shared-dlt-runner-embedded-in-binary.md  0007-one-yaml-per-source.md
docs/superpowers/: roadmap.md
docs/superpowers/plans/: 2026-05-01-prism-m1-das-implementation.md  2026-05-03-prism-m2-dab-implementation.md
docs/superpowers/specs/: 2026-05-01-prism-m1-das-design.md  2026-05-02-prism-m2-dab-design.md
prism/: .gitignore  Makefile  README.md  go.mod  go.sum
prism/.github/workflows/: ci.yml
prism/cmd/prism/: e2e_test.go  main.go
prism/internal/cli/: dab_build.go  dab_build_test.go  dab_discover.go  dab_discover_test.go  dab_run.go  das_build.go  das_build_test.go  das_discover.go  das_land.go  das_run.go  doctor.go  init.go  init_test.go  root.go  root_test.go  run.go  validate.go  validate_test.go
prism/internal/contracts/: crosslayer.go  crosslayer_test.go  entity.go  focal.go  focal_loader.go  focal_loader_test.go  focal_validate.go  loader.go  (+6 more)
prism/runtime/: embed.go
prism/runtime/dlt_runner/: __main__.py  events.py  pyproject.toml  pyproject.toml.tmpl  runner.py
prism/runtime/dlt_runner/providers/: odata.py
prism/runtime/dlt_runner/tests/: test_events.py  test_providers_odata.py  test_runner.py  test_runner_integration.py
prism/runtime/dlt_runner/tests/fixtures/: customer.yml  source.yml
(+83 files in other folders)
